@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  30 Jun 2007; Roy Marples <uberlord@gentoo.org>:
+
+    Don't set an early font if consolefont isn't in a runlevel, #183773.
+
   27 Jun 2007; Roy Marples <uberlord@gentoo.org>:
 
     Add --no-ldconfig option to env-update to match portage.
